# curie

./: README.md
curie_demos/: CMakeLists.txt  README.md  package.xml
curie_demos/config/: config_hilgendorf.yaml
curie_demos/config/imarkers/: imarker_cart.csv  imarker_goal.csv  imarker_start.csv
curie_demos/include/curie_demos/: cart_path_planner.h  curie_demos.h  imarker_robot_state.h  process_mem_usage.h  ur5_descartes_app.h
curie_demos/include/hilgendorf_moveit_demos/: cart_path_planner.h  cartesian_path_planner.h  state_validity_checker.h
curie_demos/launch/: hilgendorf_demo.launch  hilgendorf_visualize.launch  moveit.rviz
curie_demos/src/: cart_path_planner.cpp  curie_demos.cpp  curie_demos_main.cpp  imarker_robot_state.cpp  moveit_base.cpp  state_validity_checker.cpp  ur5_descartes_app.cpp
curie_demos/src/tools/: memory_demo.cpp  test_pose_distance.cpp
hilgendorf_moveit_demos/: CMakeLists.txt  README.md  package.xml
hilgendorf_moveit_demos/config/: config_hilgendorf.yaml  hilgendorf_controllers.yaml
hilgendorf_moveit_demos/config/imarkers/: imarker_start.csv
hilgendorf_moveit_demos/include/hilgendorf_moveit_demos/: cart_path_planner.h  hilgendorf_demos.h  imarker_robot_state.h  model_based_state_space.h  process_mem_usage.h  state_validity_checker.h
hilgendorf_moveit_demos/launch/: hilgendorf_demo.launch  hilgendorf_simulation.launch  hilgendorf_teleop.launch  hilgendorf_visualize.launch  moveit.rviz  tf_interactive_marker.launch
hilgendorf_moveit_demos/src/: cart_path_planner.cpp  hilgendorf_demos.cpp  hilgendorf_demos_main.cpp  hilgendorg_demos.cpp  imarker_robot_state.cpp  memory_demo.cpp  model_based_state_space.cpp  state_validity_checker.cpp  test_pose_distance.cpp
hilgendorf_moveit_demos_old/: CMakeLists.txt  package.xml
hilgendorf_moveit_demos_old/launch/: debug_settings.gdb  hilgendorf_demos.launch  moveit.rviz  moveit_rviz.launch  run.sh
hilgendorf_moveit_demos_old/src/: hilgendorf_demos.cpp
