<?xml version="1.0"?>
<package>
  <name>hilgendorf_moveit_demos</name>
  <version>0.0.1</version>
  <description>Demonstrate dual arm manipulation using a combination of free space and Cartesian planning</description>

  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/ros-industrial-consortium/curie</url>
  <url type="butracker">https://github.com/ros-industrial-consortium/curie/issues</url>
  <url type="repository">https://github.com/ros-industrial-consortium/curie/</url>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>moveit_boilerplate</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosparam_shortcuts</build_depend>
  <build_depend>roslint</build_depend>

  <run_depend>moveit_boilerplate</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_visual_tools</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rosparam_shortcuts</run_depend>

  <export>
  </export>
</package>
