<?xml version='1.0' encoding='ASCII'?>
<package>
  <name>hilgendorf_moveit_demos</name>

  <version>0.5.3</version>

  <description>Testing / research code for using the Hilgendorf with MoveIt!</description>
  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>
  <license>BSD</license>

  <url type="website">https://github.com/davetcoleman/moveit_hilgendorf</url>
  <url type="butracker">https://github.com/davetcoleman/moveit_hilgendorf/issues</url>
  <url type="repository">https://github.com/davetcoleman/moveit_hilgendorf/</url>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>moveit_humanoid</build_depend>
  <build_depend>ompl_visual_tools</build_depend>
  <build_depend>moveit_ompl</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>random_numbers</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>pluginlib</build_depend>

  <run_depend>moveit_humanoid</run_depend>
  <run_depend>ompl_visual_tools</run_depend>
  <run_depend>moveit_ompl</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>moveit_visual_tools</run_depend>
  <run_depend>random_numbers</run_depend>
</package>
